fix: replaced word breaks with overflow-x auto

--- a/frontend/src/sass/_Message.scss
+++ b/frontend/src/sass/_Message.scss
@@ -50,7 +50,8 @@
     cursor: auto;
     user-select: text;
     & > span {
-      word-break: break-all;
+      overflow-x: auto;
+      @include scrollbars(2px);
     }
     font-size: 17px;
     margin-top: -5px;
